# SerialReader

./: CMakeLists.txt  README.md
src/: add_baudrate.cpp  add_baudrate.h  add_baudrate.ui  common.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cpp  parser.h  serialreader.cpp  serialreader.h
src/parameters/: serial_settings.cpp  serial_settings.h  serial_settings.ui
src/parser/: parser.cpp  parser.h
src/reader/: serialreader.cpp  serialreader.h
src/theme/dark/: darkstyle.qss
